# AdaptiveOpticsControl

./: .gitignore  .pages.dox.swp  Doxyfile  Makefile  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  configure.ac.source  doxygen_sqlite3.db  index.html  index.md  index.savehtml  libtool  pages.dox
src/: AdaptiveOpticsControl  CLIcore.c  CLIcore.h  CLIcore.md  ImageStruct.h  Makefile  Makefile.am  Makefile.in  calc_bison.c  calc_bison.h  calc_bison.y  calc_flex.c  calc_flex.l  clistartup.txt  initmodules.c
src/.deps/: AdaptiveOpticsControl-CLIcore.Po  AdaptiveOpticsControl-calc_bison.Po  AdaptiveOpticsControl-calc_flex.Po  AdaptiveOpticsControl-initmodules.Po
src/.libs/: AdaptiveOpticsControl
src/00CORE/: 00CORE-util.c  00CORE.c  00CORE.h  00CORE.lo  Makefile  Makefile.am  Makefile.bak  Makefile.in  lib00core.la
src/00CORE/.deps/: 00CORE.Plo
src/00CORE/.libs/: lib00core.la  lib00core.lai  lib00core.so.0.0.0
src/AOloopControl/: AOloopControl.c  AOloopControl.h  AOloopControl.lo  Makefile  Makefile.am  Makefile.in  README.md  README.md~  libaoloopcontrol.la
src/AOloopControl/.deps/: AOloopControl.Plo
src/AOloopControl/.libs/: libaoloopcontrol.la  libaoloopcontrol.lai  libaoloopcontrol.so.0.0.0
src/AOloopControl/doc/: .~lock.AOloopControl_figs.ppt#  AOlab20170427.ppt  AOloopControl.html  AOloopControl.md  AOloopControl.md.post  AOloopControl_figs.ppt  aolmkmodes.html  aolmkmodes.md.post  m_AOloopControl.md  sharedmemstreams.html  sharedmemstreams.md.post
src/AOloopControl/docdir/: AOloopControl.html  AOloopControl.md  AOloopControl.md.post  AOloopControl_figs.ppt  aolmkmodes.html  aolmkmodes.md.post  testprog.c
src/AOloopControl/scripts/: README.txt  acquRespM  alignPcam  aol2startup.txt  aolMeasureZrespmat  aolconf  aolconf_save  aolconf~  aolctr  aolmkmodes  aolrun~  installPackages  script_aol2test  syncscripts
src/AOloopControl/scriptsSave/: .synscript.swp  MeasDMmodesRec  MeasureLatency  README.txt  aolCleanZrespmat  aolMeasureZrespmat  aolconf  aolctr  aolmkmodes  aolrun  aolzploopon  mkDMslaveAct  mkH50poke  modesextract0  modesextract1  script_aol2test  synscript
src/AOloopControl/tmp/: aolMeasureZrespmat  aolconf  aolctr  aolctr-2-fifo  aolmkmodes  aolrun  dmdisp.fits  dmif.fits  dmif0.fits  dmmap.fits  linkscripts  pyramp_000.fits  pyrpha_000.fits  script_aol2test  shmimmonstartup  tmpDMactmap_cube.fits  turbs.fits  (+4 more)
src/AOloopControl_DM/: AOloopControl_DM.c  AOloopControl_DM.h  AOloopControl_DM.lo  Makefile  Makefile.am  Makefile.in  libaoloopcontroldm.la
src/AOloopControl_IOtools/: AOloopControl_IOtools.c  AOloopControl_IOtools.h  Makefile.am  Makefile.in
src/AOloopControl_PredictiveControl/: AOloopControl_PredictiveControl.c  AOloopControl_PredictiveControl.h  Makefile.am  Makefile.in
src/AOloopControl_acquireCalib/: AOloopControl_acquireCalib.c  AOloopControl_acquireCalib.h  Makefile.am  Makefile.in
src/AOloopControl_computeCalib/: AOloopControl_computeCalib.c  Makefile.am  Makefile.in
src/AOloopControl_perfTest/: AOloopControl_perfTest.c  AOloopControl_perfTest.h  Makefile.am  Makefile.in
src/AOsystSim/: AOsystSim.c  AOsystSim.h  AOsystSim.lo  Makefile  Makefile.am  Makefile.in  libaosystsim.la
src/AtmosphereModel/: AtmosphereModel.c  AtmosphereModel.lo  Makefile  Makefile.am  Makefile.in  libatmospheremodel.la
src/AtmosphericTurbulence/: AtmosphericTurbulence.c  AtmosphericTurbulence.lo  Makefile  Makefile.am  Makefile.in  libatmosphericturbulence.la  notes.txt  turbul.prof
src/COREMOD_arith/: COREMOD_arith-util.c  COREMOD_arith.c  COREMOD_arith.h  COREMOD_arith.lo  Makefile  Makefile.am  Makefile.in  libcoremodarith.la
src/COREMOD_iofits/: COREMOD_iofits-util.c  COREMOD_iofits.c  COREMOD_iofits.h  COREMOD_iofits.lo  Makefile  Makefile.am  Makefile.bak  Makefile.in  iofits.funclist  libcoremodiofits.la
src/COREMOD_memory/: COREMOD_memory-util.c  COREMOD_memory.c  COREMOD_memory.h  COREMOD_memory.lo  Makefile  Makefile.am  Makefile.bak  Makefile.in  libcoremodmemory.la  memory-util-bak.c
src/COREMOD_tools/: COREMOD_tools-util.c  COREMOD_tools.c  COREMOD_tools.h  COREMOD_tools.lo  Makefile  Makefile.am  Makefile.bak  Makefile.in  libcoremodtools.la
src/ImageStreamIO/: ImCreate_test.c  ImageStreamIO.c  ImageStreamIO.h  Makefile.am  Makefile.in
src/OptSystProp/: Makefile  Makefile.am  Makefile.in  OptSystProp.c  OptSystProp.h  OptSystProp.lo  liboptsystprop.la
src/OpticsMaterials/: Makefile  Makefile.am  Makefile.in  OpticsMaterials.c  OpticsMaterials.h  OpticsMaterials.lo  libopticsmaterials.la
src/WFpropagate/: Makefile  Makefile.am  Makefile.in  WFpropagate.c  WFpropagate.h  WFpropagate.lo  libwfpropagate.la
src/ZernikePolyn/: Makefile  Makefile.am  Makefile.in  ZernikePolyn.c  ZernikePolyn.h  ZernikePolyn.lo  libzernikepolyn.la
src/cudacomp/: Makefile  Makefile.am  Makefile.in  cudacomp.c  cudacomp.h  cudacomp.lo  libcudacomp.la
src/fft/: Makefile  Makefile.am  Makefile.bak  Makefile.in  fft.c  fft.h  fft.lo  libfft.la
src/image_basic/: Makefile  Makefile.am  Makefile.in  image_basic.c  image_basic.h  image_basic.lo  libimagebasic.la
src/image_filter/: Makefile  Makefile.am  Makefile.in  image_filter.c  image_filter.h  image_filter.lo  libimagefilter.la
src/image_gen/: Makefile  Makefile.am  Makefile.bak  Makefile.in  image_gen-util.c  image_gen.c  image_gen.h  image_gen.lo  libimagegen.la
src/info/: Makefile  Makefile.am  Makefile.bak  Makefile.in  info.c  info.h  info.lo  libinfo.la
src/kdtree/: Makefile  Makefile.am  Makefile.bak  Makefile.in  kdtree-util.c  kdtree.c  kdtree.h  kdtree.lo  libkdtree.la
src/linARfilterPred/: Makefile  Makefile.am  Makefile.in  liblinarfilterpred.la  linARfilterPred.c  linARfilterPred.h  linARfilterPred.lo
src/linopt_imtools/: Makefile  Makefile.am  Makefile.in  liblinoptimtools.la  linopt_imtools.c  linopt_imtools.h  linopt_imtools.lo
src/psf/: Makefile  Makefile.in  libpsf.la  psf.c  psf.lo
src/statistic/: Makefile  Makefile.am  Makefile.bak  Makefile.in  libstatistic.la  statistic-util.c  statistic.c  statistic.h  statistic.lo
(+1455 files in other folders)
